fix: 자바 버전에 맞는 문법으로 테스트 교체